# ZeroPoint

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  Dockerfile.windows-cross  GRADIENT_DEMOS.md  ICON-INSTRUCTIONS.md  Makefile  README.md  ROADMAP.md  TODO.md  build-all.sh  build-linux.sh  build-macos.sh  build-windows-cross.sh  build-windows.bat  rebuild.sh  test_arm64_jit.sh  test_loop_runner  test_loop_runner.cpp
.github/workflows/: build.yml
build_qt/: CMakeCache.txt  Makefile  cmake_install.cmake  test.zpb  test_fb_write  test_fb_write.cpp  test_fb_write2  test_fb_write2.cpp  test_fill_result  test_fill_result.cpp  test_simple_pixel
build_qt/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_qt/make_test_rom_autogen/: deps
build_qt/run_apu_demo_autogen/: deps
build_qt/run_demo_autogen/: deps
build_qt/test_apu_autogen/: deps
build_qt/test_cpu_autogen/: deps
build_qt/test_demo_autogen/: deps  moc_predefs.h
build_qt/test_demo_white_autogen/: deps
build_qt/test_demo_white_debug_autogen/: deps
build_qt/test_dma_autogen/: deps
build_qt/test_ppu_autogen/: deps
build_qt/test_white_fill_autogen/: deps
build_qt/zeropoint_core_autogen/: deps
build_qt/zeropoint_qt_autogen/: deps  moc_predefs.h
build_qt/zeropoint_qt_autogen/WTNNEUUVOU/: moc_configdialog.cpp.d  moc_emulatorwidget.cpp  moc_emulatorwidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
build_qt/zeropoint_sdl_autogen/: deps
cmake/: toolchain-mingw64-x64.cmake
docs/: IMPLEMENTATION-SUMMARY.txt  INSTRUCTION_IMPLEMENTATION_GUIDE.md  MEMORY-MAPPING-IMPLEMENTATION.md  MISSING-IMPLEMENTATIONS.md  SYSTEM-FINALIZED.md  building.md  debug-protocol.md  display.md  dma.md  io-assignments-needed.txt  io-mapping.md  io-registers-found.md  io-usage-guide.md  ppu.md  qt-frontend.md  zpb-format.md
examples/boot-rom/demo-cpu-ppu-apu/: README.md
examples/boot-rom/tester/: tester.asm
examples/rom-template/: rom.mk
include/: apu.h  apu_instructions.h  cpu.h  cpu_instructions.h  default_boot_rom.h  display.h  dma.h  interrupt_controller.h  ppu.h  ppu_instructions.h  ppu_jit.h  rom.h  system.h  vulkan_window.h  window.h
qt/: configdialog.cpp  configdialog.h  configdialog.ui  emulatorwidget.cpp  emulatorwidget.h  keybindings.h  keycapturebutton.cpp  keycapturebutton.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
resources/: zeropoint.icns
shaders/: shader.vert  vert.spv
src/: apu.cpp  apu_instructions.cpp  cpu.cpp  cpu_instructions.cpp  default_boot_rom.cpp  display.cpp  dma.cpp  main.cpp  ppu.cpp  ppu_instructions.cpp  ppu_jit.cpp  rom.cpp  system.cpp  vulkan_window.cpp  vulkan_window_full.cpp  window.cpp
tools/: bench_ppu_tick.cpp  debugger.cpp  gen_cpu_instructions.py  make_test_rom.cpp  profile_bootrom.cpp  run_apu_demo.cpp  run_demo.cpp  run_demo_vulkan.cpp  test_apu.cpp  test_arm64_alloc.cpp  test_arm64_jit_debug.cpp  test_boot_rom.cpp  test_cpu.cpp  test_demo.cpp  test_demo_white.cpp  test_demo_white_debug.cpp  test_diag_rom.cpp  test_dma.cpp  test_jit.cpp  test_ppu.cpp  test_ppu_instructions.cpp  test_rom_bare.cpp  test_simple_pixel.cpp  test_white_fill.cpp
